# ARES_pathTracking

./: LICENSE  README.md
C++/: PP_CLA.cpp  PP_VLA.cpp  pathInterpolation.cpp  pathTracking.cpp  waypoints.txt  waypoints1.txt
MATLAB/: pathTracking_main.m  purepursuit_adv.slx  stanleypathtracking.slx
ares-main/: CMakeLists.txt  package.xml
ares-main/launch/: bridge_config.yaml  sim.launch.py
ares-main/models/robot/: model.config  model.sdf
ares-main/sim_worlds/: world.sdf
ares-main/src/: main_node.cpp
config/: config.yaml
coordinator/: package.xml  setup.cfg  setup.py
coordinator/coordinator/: mainCoordinator.py  position_republish.py
coordinator/launch/: coordinator.launch.py
docs/: Branching_README.md
models/actuation-controller/: actuation_controller_sim.m  main.m  model_plant.m  monte_carlo.m
path_tracking/: CMakeLists.txt  package.xml
path_tracking/resources/: micropoints.txt
path_tracking/src/: pathInterp.cpp  pathTracking.cpp  pathTrackingVLA.cpp
searching_and_planning/: CMakeLists.txt  package.xml
searching_and_planning/include/searching_and_planning/: single_plan_server.h
searching_and_planning/include/searching_and_planning/core/: Config.h  MySamplingBasedPlanners.h  SearchAndPlan.h  UsefulMacros.h  frontierSearching.h
searching_and_planning/include/searching_and_planning/tools/: ConfigurationSpace.h  ConfigurationSpace_impl.h  Graph.h  GraphContainers.h  Graph_impl.h  HelpfulClass.h  HelpfulFunctions.h  HelpfulStructs.h  MyPath.h
searching_and_planning/src/: single_plan_server.cpp
searching_and_planning/src/core/: Config.cpp  MySamplingBasedPlanners.cpp  SearchAndPlan.cpp  frontierSearching.cpp
searching_and_planning/src/tools/: HelpfulClass.cpp
testing_module/: package.xml  setup.cfg  setup.py
testing_module/launch/: simulation.launch.py
testing_module/test_map/: occupancy_250x250_flip.csv  occupancy_92x92_flip.csv  rover_0_iter_0_diskmap.csv  rover_0_iter_1_diskmap.csv  rover_0_iter_2_diskmap.csv  rover_0_iter_3_diskmap.csv  rover_0_iter_4_diskmap.csv  rover_0_iter_5_diskmap.csv  rover_0_iter_6_diskmap.csv  rover_0_iter_7_diskmap.csv  rover_0_iter_8_diskmap.csv  rover_0_iter_9_diskmap.csv
testing_module/testing_module/: call_searching_server.py  export_data.py  lidar_simulator.py  plot_generated_graph.py  publish_fake_data.py  publish_fake_data_coordinate.py  rover_simulator.py  visualization.py
